# LearnCmakeWindows

./: CMakeLists.txt  README.md  test.bat
src/: main.cpp
